cluster/automation/ntfy/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master/networkpolicy-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ntfy-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ntfy
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
